Made requested changes
Changes in anchor tag color overall
Updated with new pricing 
Added new partners

--- a/callForAbstract.html
+++ b/callForAbstract.html
@@ -210,13 +210,15 @@
                                 <li>Kindly enter the conference with your real username. Unusual names like (test, user1
                                     etc.) will not be allowed to enter.</li> -->
                                 <li> 
-                                    1 conference lunch and 2 tea refreshments: for Attendee only 
-                                </li>
-                                <li>
-                                    3 conference lunch and 5 tea refreshments; 1 Conference dinner: for all 
-                                </li>
-                                <li>
                                     Registeration fee includes conference material (CD, bag, certificate, etc.)
+                                    Registration for all delegates includes: admission to all conference sessions, exhibited posters and stalls area; conference Kit; Abstract book (e-copy with ISBN Number)
+                                </li>
+                                <li>
+                                    1 conference lunch and 2 tea refreshments: for Attendee only
+                                </li>
+                                <li>
+                                    
+                                	3 conference lunch and 5 tea refreshments; 1 Conference dinner: for all others
                                 </li>
                             </ul>
                         </div>
