--- a/home.html
+++ b/home.html
@@ -568,6 +568,18 @@
             <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturers' Association </a> <br>
             <a href="https://www.kppub.com/" target="_blank"> <img src="assets/kongposh.jpg"> </a> <br>
             <a href="https://www.kppub.com/" style="font-size: 28.5px;" target="_blank"> Kongposh Publications </a>
+
+            <div class="spon-title p-1" style="font-size: 60px; margin-top: 10vh;">Publishing Partners</div>
+            <a href="http://iaraedu.com/about-journal/" target="_blank"> <img src="assets/iara.jpg"> </a> <br>
+            <a href="http://iaraedu.com/about-journal/" style="font-size: 28.5px;" target="_blank"> IARA - Indian Academicians and Research Association </a> <br>
+            <a href="https://www.akinik.com/" target="_blank"> <img src="assets/akinik.jpg"> </a> <br>
+            <a href="https://www.akinik.com/" style="font-size: 28.5px;" target="_blank"> Akinik Publications </a> <br>
+            <a href="http://www.vsrdjournals.com/" target="_blank"> <img src="assets/VSRD_INTERNATIONAL_JOURNALS.jpg" id="vsrd"> </a> <br>
+            <a href="http://www.vsrdjournals.com/" style="font-size: 28.5px;" target="_blank"> VSRD International Journal of Bio-Technology and Pharmaceutical Sciences  </a> <br>
+
+            
+
+            
           </div>
         </div>
       </div>
