--- a/registration-fees.html
+++ b/registration-fees.html
@@ -59,7 +59,7 @@
                 <div class="container">
                     <div class="container">
                         <div class="table-responsive">
-                            <p style=" text-align: center; color: #28b5b5;">Scroll Left for more columns</p>
+                            <p style="color: #28b5b5; text-align: center; text-transform: uppercase; font-weight: bold;"> OFFLINE PARTICIPANTS </p>
                         <table class="table table-sm" style="empty-cells:show; text-align:center;">
                             <thead class="thead-light">
                                 <tr>
@@ -72,49 +72,49 @@
                             <tbody style="text-align:center;">
                                 <tr>
                                   <th scope="col" colspan="2"></th>
-                                  <th scope="col">Till 24th Dec 2021</th>
-                                  <th scope="col">After 24th Dec 2021</th>
-                                  <th scope="col">Till 24th Dec 2021</th>
-                                  <th scope="col">After 24th Dec 2021</th>
+                                  <th scope="col">Normal Registration</th>
+                                  <th scope="col">On-the-spot</th>
+                                  <th scope="col">Normal Registration</th>
+                                  <th scope="col">On-the-spot</th>
                                 </tr>
                                 <tr>
-                                    <th scope="row" colspan="2">Industry</th>
-                                    <td>8,000</td>
-                                    <td>9,000</td>
-                                    <td>350</td>
-                                    <td>400</td>
+                                    <th scope="row" colspan="2">Faculty/ Scientists from Academia/ Industry</th>
+                                    <td>6,000</td>
+                                    <td>7,200</td>
+                                    <td>300</td>
+                                    <td>360</td>
                                 </tr>
 
-                                <tr>
+                                <!-- <tr>
                                     <th scope="row" colspan="2">Academia</th>
                                     <td>6,000</td>
                                     <td>6,500</td>
                                     <td>250</td>
                                     <td>300</td>
-                                </tr>
+                                </tr> -->
 
                                 <tr>
-                                    <th scope="row" colspan="2">Research Scholar</th>
-                                    <td>2,000</td>
-                                    <td>2,500</td>
+                                    <th scope="row" colspan="2"> Students / Research Scholar</th>
+                                    <td>3,000</td>
+                                    <td>3,600</td>
                                     <td>200</td>
-                                    <td>250</td>
+                                    <td>240</td>
                                 </tr>
 
-                                <tr>
+                                <!-- <tr>
                                     <th scope="row" colspan="2">Students (UG/PG)</th>
                                     <td>2,000</td>
                                     <td>2,500</td>
                                     <td>200</td>
                                     <td>250</td>
-                                </tr>
+                                </tr> -->
 
                                 <tr>
                                     <th scope="row" colspan="2">Attendee Only</th>
                                     <td>500</td>
-                                    <td>1,200</td>
+                                    <td>600</td>
                                     <td>100</td>
-                                    <td>150</td>
+                                    <td>120</td>
                                 </tr>
 
                                 <!-- <tr>
@@ -130,6 +130,79 @@
                                 </tr> -->
                             </tbody>
                         </table>
+
+                        <p style="color: #28b5b5; text-align: center; text-transform: uppercase; font-weight: bold;"> ONLINE PARTICIPANTS </p>
+                        <table class="table table-sm" style="empty-cells:show; text-align:center;">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th scope="col" colspan="2"></th>
+                                    <th scope="col" colspan="2">Indian Participants (INR)</th>
+                                    <th scope="col" colspan="2">International Participants (USD)</th>
+                                    <!-- <th scope="col">INTERNATIONAL PARTICIPATION (USD)</th> -->
+                                </tr>
+                            </thead>
+                            <tbody style="text-align:center;">
+                                <tr>
+                                  <th scope="col" colspan="2"></th>
+                                  <th scope="col">Normal Registration</th>
+                                  <th scope="col">On-the-spot</th>
+                                  <th scope="col">Normal Registration</th>
+                                  <th scope="col">On-the-spot</th>
+                                </tr>
+                                <tr>
+                                    <th scope="row" colspan="2">Faculty/ Scientists from Academia/ Industry</th>
+                                    <td>3,000</td>
+                                    <td>3,600</td>
+                                    <td>150</td>
+                                    <td>180</td>
+                                </tr>
+
+                                <!-- <tr>
+                                    <th scope="row" colspan="2">Academia</th>
+                                    <td>6,000</td>
+                                    <td>6,500</td>
+                                    <td>250</td>
+                                    <td>300</td>
+                                </tr> -->
+
+                                <tr>
+                                    <th scope="row" colspan="2"> Students / Research Scholar</th>
+                                    <td>1,500</td>
+                                    <td>1,800</td>
+                                    <td>100</td>
+                                    <td>120</td>
+                                </tr>
+
+                                <!-- <tr>
+                                    <th scope="row" colspan="2">Students (UG/PG)</th>
+                                    <td>2,000</td>
+                                    <td>2,500</td>
+                                    <td>200</td>
+                                    <td>250</td>
+                                </tr> -->
+
+                                <tr>
+                                    <th scope="row" colspan="2">Attendee Only</th>
+                                    <td>300</td>
+                                    <td>360</td>
+                                    <td>50</td>
+                                    <td>60</td>
+                                </tr>
+
+                                <!-- <tr>
+                                    <th scope="row" rowspan="2">Presenter/Attendee</th>
+                                    <th scope="row">Faculty/Scientists from Academia</th>
+                                    <td style="text-align: center;">₹ 2000</td>
+                                    <td style="text-align: center;">$ 200</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Participants from Industry</th>
+                                    <td style="text-align: center;">₹ 5000</td>
+                                    <td style="text-align: center;">$ 300</td>
+                                </tr> -->
+                            </tbody>
+                        </table>
+
                     </div>
 
                     </div>
