--- a/registration.html
+++ b/registration.html
@@ -60,9 +60,11 @@
                     <div class="container d-flex flex-column align-items-center justify-content-center"
                         style="margin-top: 30px;">
                     </div>
+                    
 
                     <!-- Table Test -->
-                    <div class="table-responsive">
+                    <div class="container-fluid d-flex flex-column justify-content-center align-items-center" style="margin-bottom: 3%;"> <a class="center-block" href="registration-fees.html" style="margin-left: auto; margin-right: auto;"> <button> FEE DETAILS </button> </a> </div>
+                    <!-- <div class="table-responsive">
                         <p style=" text-align: center; color: #28b5b5;"> Fee Details: Scroll Left for more columns</p>
                     <table class="table table-sm" style="empty-cells:show; text-align:center;">
                         <thead class="thead-light">
@@ -70,8 +72,8 @@
                                 <th scope="col" colspan="2"></th>
                                 <th scope="col" colspan="2">Indian Participants (INR)</th>
                                 <th scope="col" colspan="2">International Participants (USD)</th>
-                                <!-- <th scope="col">INTERNATIONAL PARTICIPATION (USD)</th> -->
-                            </tr>
+                                <th scope="col">INTERNATIONAL PARTICIPATION (USD)</th> -->
+                            <!-- </tr>
                         </thead>
                         <tbody style="text-align:center;">
                             <tr>
@@ -119,7 +121,7 @@
                                 <td>1,200</td>
                                 <td>100</td>
                                 <td>150</td>
-                            </tr>
+                            </tr> -->
 
                             <!-- <tr>
                                 <th scope="row" rowspan="2">Presenter/Attendee</th>
@@ -131,11 +133,11 @@
                                 <th scope="row">Participants from Industry</th>
                                 <td style="text-align: center;">₹ 5000</td>
                                 <td style="text-align: center;">$ 300</td>
-                            </tr> -->
+                            </tr>
                         </tbody>
                     </table>
-                </div>
-
+                </div> -->
+                    
                     <h2 class="text-center">ATTENDEE</h2>
                     <p style="color: red;font-weight: bold; text-align: center;"> NO APPLICATION WILL BE ENTERTAINED FOR ATTENDEES WITHOUT PAYMENT 
                     </p></br>
