--- a/advisoryCommittee.html
+++ b/advisoryCommittee.html
@@ -66,17 +66,23 @@
                         <!-- <h6 class="text-center" style="color: #145dbb;">OUR ORGANIZING TEAM
                         </h6> -->
                         <h3>ADVISORY COMMITTEE</h3>
-                        <p>Prof. Hari Om Gupta (Director, JIIT-128)
+                        <p>Prof. Hari Om Gupta - Director, JIIT-128, Noida, India
                         </p>
-                        <p>Prof. D. K. Rai (Dean A&R, JIIT)
+                        <p>Prof. D. K. Rai - Dean A&R, JIIT Noida, Noida, India
                         </p>
-                        <p>Prof Jayesh Bellare IIT Bombay
+                        <p>Prof. Jayesh Bellare - Dep. of Chemical Engineering, IIT Bombay, Mumbai, India
                         </p>
-                        <p>Dr D K Gupta Founder Felix Hospital Noida
+                        <p>Dr. D. K. Gupta - Founder, Felix Hospital, Noida, India
                         </p>
-                        <p>Prof S Panda, IIT Kanpur
+                        <p>Prof. S. Panda - Dep. of Chemical Engineering, IIT Kanpur, Kanpur, India
                         </p>
-                        <p> Nikunj Sharma, US FDA - International Advisor</p>
+                        <h3> International Advisors </h3>
+                        <p> Dr. Nikunj Sharma - Regulatory Project Manager, US FDA, USA 
+                        </p>
+                        <p> Dr. Neeraja Balachander - Lead Medical Director, Atherosclerosis Novartis, NY, USA
+                        </p>
+                        <p> Dr. Lalita Wadhwa - Div. of Congenital Heart Surgery, Baylor College of Medicine, Houston, TX, USA
+                        </p>
                     </div>
                     <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
                         style="margin-top: 40px;">
