--- a/brochure.html
+++ b/brochure.html
@@ -60,6 +60,7 @@
 
                         <img class="jp-img" src="assets/brochure-page-1.PNG" style="width:90%;" alt="">
                         <img class="jp-img" src="assets/brochure-page-2.PNG" style="width:90%;" alt="">
+                        <img class="jp-img" src="assets/brochure-page-3.PNG" style="width:90%;" alt="">
                         <br>
                         <br>
                         <br>
