--- a/home.html
+++ b/home.html
@@ -138,7 +138,7 @@
 
             </p> -->
             
-            <marquee style="font-size: 130%;"> (Theme: Innovations in Life Sciences and Computational Biology) </marquee>
+            <marquee style="font-size: 130%; color: red; width:80%" scrollamount=15> (Theme: Innovations in Life Sciences and Computational Biology) </marquee>
             <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</h1>
             
 
@@ -224,7 +224,7 @@
     </div>
     <!--  -->
     <div class="main-wrap">
-      <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
+      <div class="content rellax" data-rellax-speed="2" data-rellax-percentage="0.5">
         <h1 style="
               background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
