--- a/home.html
+++ b/home.html
@@ -154,7 +154,7 @@
                   <li class="list-item"><a class="navbar" href="schedule.html">SCHEDULE</a></li>
                   <li class="list-item"><a class="navbar" href="orgCommittee.html">ORGANISING COMMITEE</a></li>
                   <li class="list-item"><a class="navbar" href="advisoryCommittee.html">ADVISORY COMMITEE</a></li>
-                  <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
+                  <li class="list-item"><a class="navbar" href="publishing-partners.html">PUBLISHING PARTNERS</a></li>
                   <li class="list-item"><a class="navbar" href="#Sponsors"> PARTNERS </a></li>
                   <li class="list-item"><a class="navbar" href="gallery.html">GALLERY</a></li>
                   <!-- target="_blank" -->
