--- a/registration-fees.html
+++ b/registration-fees.html
@@ -205,6 +205,47 @@
 
                     </div>
 
+                    <div class="container" style="margin-top: 20px;">
+                        <br>
+                        <h2 class="text-center">OFFLINE PARTICIPANTS</h2>
+                        <div class="content-gray" style="display: block;">
+                            <ul class="ul-guidelines">
+                                    Registration for all offline delegates includes:
+                                    <li> Admission to all conference sessions, exhibited posters and stalls area </li>
+                                    <li> Publication of abstract in conference proceedings (with ISBN no.) only after peer reviewing  </li>
+                                    <li> Publication of invited articles/chapters in International Journal (VSRD publications, indexed) or full chapter in edited book (VSRD publications, ISBN no.) only after peer reviewing (sponsored by Organizers) </li>
+                                    <li> Conference Kit;  </li>
+                                    <li> 1 conference lunch and 2 tea refreshments: for Attendee only </li>
+                                    <li> 3 conference lunch and 5 tea refreshments; 1 Conference dinner: for all other offline categories </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="container" style="margin-top: 20px;">
+                        <h2 class="text-center">ONLINE PARTICIPANTS</h2>
+                        <div class="content-gray" style="display: block;">
+                            <ul class="ul-guidelines">
+                                <li>Kindly keep your microphone and camera switched off throughout the conference unless you
+                                    are invited to talk or it is your turn to present.</li>
+                                <li>Please do not greet in the chat-box. It will be used for queries and questions.
+                                </li>
+                                <li>Kindly ensure that you send your presenting material well in advance to avoid any
+                                    confusion</li>
+                                <li>While presenting make sure you have a good internet connectivity and no background
+                                    disturbance</li>
+                                <li>Kindly enter the conference with your real username. Unusual names like (test, user1
+                                    etc.) will not be allowed to enter.</li>
+                                </br>
+                                </br>
+                                Registration for all online delegates includes:
+                                <li> Admission to all conference sessions </li>
+                                <li> Online posters and oral sessions </li>
+                                <li> Publication of abstract in conference proceedings (with ISBN no.) only after peer reviewing </li>
+                                <li> Publication of invited articles/chapters in International Journal (VSRD publications, indexed) or full chapter in edited book (VSRD publications, ISBN no.) only after peer reviewing (sponsored by Organizers) </li>
+                            </ul>
+                        </div>
+                    </div>
+
                     </div>
                     <div class="container">
                         <h2 class="text-center">PAYMENT METHOD</h2>
