--- a/registration.html
+++ b/registration.html
@@ -182,10 +182,10 @@
                           You will be notified once your abstract gets accepted.</p>
                   </div>
                   
-                  <h2 class="text-center">JIIT STUDENTS</h2>
+                  <h2 class="text-center">JIIT </h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe4ZjGbusAMHTuGONRzEgCo6mqYIFHQJgYPrH4qn6ch2wRdEw/viewform?usp=sf_link"><button>REGISTRATION
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScY_Ae4WWo5bqSJARqGWpbTJ-yiarcO4mOChc_oOSA1rjHCzw/viewform?usp=sf_link"><button>REGISTRATION
                                     FORM</button></a>
                         </p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
@@ -196,7 +196,7 @@
                    <h2 class="text-center">VOLUNTEERS</h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe4ZjGbusAMHTuGONRzEgCo6mqYIFHQJgYPrH4qn6ch2wRdEw/viewform?usp=sf_link"><button>REGISTRATION
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf3qNYUf4RY_KXhXpKsf6djxXMQz7WbArRaZ0KylC3J7yQFPw/viewform?usp=sf_link"><button>REGISTRATION
                                     FORM</button></a>
                         </p>
                         <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
