--- a/callForAbstract.html
+++ b/callForAbstract.html
@@ -450,16 +450,18 @@
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
-                <p>&copy ICABB JIIT 2022</p>
-                <div class="line"></div>
-                <p>
-                    DESIGNED AND DEVELOPED WITH
-                    <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
-                    BY
-                    <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
-                    <span style="color: white;font-size: 16px;font-weight: 500;"> and </span>
-                    <span><a target="_blank" href="https://www.linkedin.com/in/nikhil-paleti-3491aa193/">NIKHIL PALETI</a></span>
-                </p>
+                <div class="credit">
+                    <p>&copy ICABB JIIT 2022</p>
+                    <div class="line"></div>
+                    <p>
+                      DESIGNED AND DEVELOPED WITH
+                      <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
+                      BY
+                      <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
+                      <span style="color: white;font-size: 16px;font-weight: 500;"> and </span>
+                      <span><a target="_blank" href="https://www.linkedin.com/in/nikhil-paleti-3491aa193/">NIKHIL PALETI</a></span>
+                    </p>
+                  </div>
             </div>
             </div>
         </footer>
