usseeeellesss. same changes

--- a/callForAbstract.html
+++ b/callForAbstract.html
@@ -85,6 +85,13 @@
                                     disturbance</li>
                                 <li>Kindly enter the conference with your real username. Unusual names like (test, user1
                                     etc.) will not be allowed to enter.</li>
+                                </br>
+                                </br>
+                                Registration for all online delegates includes:
+                                <li> Admission to all conference sessions </li>
+                                <li> Online posters and oral sessions </li>
+                                <li> Publication of abstract in conference proceedings (with ISBN no.) only after peer reviewing </li>
+                                <li> Publication of invited articles/chapters in International Journal (VSRD publications, indexed) or full chapter in edited book (VSRD publications, ISBN no.) only after peer reviewing (sponsored by Organizers) </li>
                             </ul>
                         </div>
                     </div>
@@ -199,27 +206,13 @@
                         <h2 class="text-center">GUIDELINES FOR OFFLINE PARTICIPANTS</h2>
                         <div class="content-gray" style="display: block;">
                             <ul class="ul-guidelines">
-                                <!-- <li>Kindly keep your microphone and camera switched off throughout the conference unless you
-                                    are invited to talk or it is your turn to present.</li>
-                                <li>Please do not greet in the chat-box. It will be used for queries and questions.
-                                </li>
-                                <li>Kindly ensure that you send your presenting material well in advance to avoid any
-                                    confusion</li>
-                                <li>While presenting make sure you have a good internet connectivity and no background
-                                    disturbance</li>
-                                <li>Kindly enter the conference with your real username. Unusual names like (test, user1
-                                    etc.) will not be allowed to enter.</li> -->
-                                <li> 
-                                    Registeration fee includes conference material (CD, bag, certificate, etc.)
-                                    Registration for all delegates includes: admission to all conference sessions, exhibited posters and stalls area; conference Kit; Abstract book (e-copy with ISBN Number)
-                                </li>
-                                <li>
-                                    1 conference lunch and 2 tea refreshments: for Attendee only
-                                </li>
-                                <li>
-                                    
-                                	3 conference lunch and 5 tea refreshments; 1 Conference dinner: for all others
-                                </li>
+                                    Registration for all offline delegates includes:
+                                    <li> Admission to all conference sessions, exhibited posters and stalls area </li>
+                                    <li> Publication of abstract in conference proceedings (with ISBN no.) only after peer reviewing  </li>
+                                    <li> Publication of invited articles/chapters in International Journal (VSRD publications, indexed) or full chapter in edited book (VSRD publications, ISBN no.) only after peer reviewing (sponsored by Organizers) </li>
+                                    <li> Conference Kit;  </li>
+                                    <li> 1 conference lunch and 2 tea refreshments: for Attendee only </li>
+                                    <li> 3 conference lunch and 5 tea refreshments; 1 Conference dinner: for all other offline categories </li>
                             </ul>
                         </div>
                     </div>
@@ -457,16 +450,18 @@
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
-                <p>&copy ICABB JIIT 2022</p>
-                <div class="line"></div>
-                <p>
-                    DESIGNED AND DEVELOPED WITH
-                    <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
-                    BY
-                    <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
-                    <span style="color: white;font-size: 16px;font-weight: 500;"> and </span>
-                    <span><a target="_blank" href="https://www.linkedin.com/in/nikhil-paleti-3491aa193/">NIKHIL PALETI</a></span>
-                </p>
+                <div class="credit">
+                    <p>&copy ICABB JIIT 2022</p>
+                    <div class="line"></div>
+                    <p>
+                      DESIGNED AND DEVELOPED WITH
+                      <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
+                      BY
+                      <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
+                      <span style="color: white;font-size: 16px;font-weight: 500;"> and </span>
+                      <span><a target="_blank" href="https://www.linkedin.com/in/nikhil-paleti-3491aa193/">NIKHIL PALETI</a></span>
+                    </p>
+                  </div>
             </div>
             </div>
         </footer>
