--- a/contact-us.html
+++ b/contact-us.html
@@ -42,7 +42,7 @@
     </lines>
     <content>
         <div class="main-wrap">
-            <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
+            <div class="content rellax" data-rellax-speed="-2" data-rellax-percentage="0.5">
                 <h1 style="
               background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
@@ -56,18 +56,36 @@
                     <p></p>
                     <div class="line"></div>
                 </div>
-                <div class="container">
-                    <div class="content-gray" style="display: block;">
-                        <p>Prof. Rachana - <a href="tel:919315434437">+91-9315434437</a></p>
-                        <p>Dr. Shazia Haider - <a href="tel:919811930241">+91-9811930241</a></p>
-                        <a href="mailto:icabb2022@gmail.com">Mail us at icabb2022@gmail.com</a>
+                <div class="container d-flex flex-column justify-content-center align-items-center">
+                    <div class="d-flex flex-row justify-content-center" style="width: 100%;">
+                        <div class="contact content-gray ">
+                            <h4> To Contact Us: </h4>
+                            <p>Prof. Rachana - <br>
+                                 <a href="tel:919315434437">+91-9315434437</a>
+                            </p>
+                            <p>Dr. Shazia Haider - <br> 
+                                <a href="tel:919811930241">+91-9811930241</a>
+                            </p>
+                            <a href="mailto:icabb2022@gmail.com">Mail us at icabb2022@gmail.com</a>
+
+                            <a href="mailto:conference2022@jiiticabb.com">or at conference2022@jiiticabb.com</a>
                         <br>
-                        <a href="mailto:conference2022@jiiticabb.com">or at conference2022@jiiticabb.com</a>
-                        <br>
+                        </div>
+
+                        <div class="transport content-gray">
+                            <h4> Transport Options: </h4>
+                            <p> Metro Facility avialable and Private Autos available from Nearest Metro to college </p>
+                        </div>
+
+                        <div class="nearest content-gray">
+                            <h4> Nearest Metro: </h4>
+                            <p> Noida Electronic City (Opposite to JIIT, Walking Distance) </p>
+                        </div>
+
+                        
                         
                     </div>
-
-
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.000944530206!2d77.36986691542914!3d28.62973379095769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce551491b3ce7%3A0x7335d9fcfd4d9db0!2sJAYPEE%20INSTITUTE%20OF%20INFORMATION%20TECHNOLOGY!5e0!3m2!1sen!2sin!4v1622186127177!5m2!1sen!2sin" width="80%" height="400px" style="margin-top: 10vh;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
 
 
