--- a/home.html
+++ b/home.html
@@ -792,9 +792,9 @@
               <div class="col-lg-4 col-md-4 mb-1 px-1">
                 <div class="portfolio-item wow animated" style="visibility: visible;">
                   <a class="portfolio-popup">
-                    <img src="img/shipra.png" alt="" style="height:200px;">
+                    <img src="img/lal-quila.png" alt="" style="height:200px;">
                     <div class="portfolio-overlay">
-                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Shipra Mall</h5></div>
+                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Red Fort </h5></div>
                     </div>
                   </a>
                 </div>
@@ -803,9 +803,9 @@
               <div class="col-lg-4 col-md-4 mb-1 px-1">
                 <div class="portfolio-item wow animated" style="visibility: visible;">
                   <a class="portfolio-popup">
-                    <img src="img/shipra.png" alt="" style="height:200px;">
+                    <img src="img/akshardham.png" alt="" style="height:200px;">
                     <div class="portfolio-overlay">
-                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Shipra Mall</h5></div>
+                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Akshardham Temple</h5></div>
                     </div>
                   </a>
                 </div>
@@ -814,9 +814,9 @@
               <div class="col-lg-4 col-md-4 mb-1 px-1">
                 <div class="portfolio-item wow animated" style="visibility: visible;">
                   <a class="portfolio-popup">
-                    <img src="img/shipra.png" alt="" style="height:200px;">
+                    <img src="img/jantar-mantar.png" alt="" style="height:200px;">
                     <div class="portfolio-overlay">
-                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Shipra Mall</h5></div>
+                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;"> Jantar Mantar </h5></div>
                     </div>
                   </a>
                 </div>
@@ -825,9 +825,9 @@
               <div class="col-lg-4 col-md-4 mb-1 px-1">
                 <div class="portfolio-item wow animated" style="visibility: visible;">
                   <a class="portfolio-popup">
-                    <img src="img/gate3.PNG" alt="" style="height:200px;">
+                    <img src="img/lotus.png" alt="" style="height:200px;">
                     <div class="portfolio-overlay">
-                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;"> Gate No.3 </h5></div>
+                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;"> Lotus Temple </h5></div>
                     </div>
                   </a>
                 </div>
@@ -838,9 +838,9 @@
               <div class="col-lg-4 col-md-4 mb-1 px-1">
                 <div class="portfolio-item wow animated" style="visibility: visible;">
                   <a class="portfolio-popup">
-                    <img src="img/gate3.PNG" alt="" style="height:200px;">
+                    <img src="img/cp.png" alt="" style="height:200px;">
                     <div class="portfolio-overlay">
-                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Gate No.3</h5></div>
+                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Connaught Place</h5></div>
                     </div>
                   </a>
                 </div>
@@ -849,9 +849,9 @@
               <div class="col-lg-4 col-md-4 mb-1 px-1">
                 <div class="portfolio-item wow animated" style="visibility: visible;">
                   <a class="portfolio-popup">
-                    <img src="img/gate3.PNG" alt="" style="height:200px;">
+                    <img src="img/india_gate.png" alt="" style="height:200px;">
                     <div class="portfolio-overlay">
-                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;"> Gate No.3</h5></div>
+                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;"> India Gate</h5></div>
                     </div>
                   </a>
                 </div>
