--- a/registration.html
+++ b/registration.html
@@ -181,6 +181,19 @@
                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                           You will be notified once your abstract gets accepted.</p>
                   </div>
+
+                  <h2 class="text-center">SPEAKERS</h2>
+                    <div class="content-gray" style="display: block; margin-bottom:5%;">
+                        <!-- <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                              href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p> -->
+
+                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfXnWohzwIw7gjOE0AP2j4Nn5yBuplMs4f9hpuv2doX5RQvjw/viewform"><button>REGISTRATION
+                                    FORM</button></a>
+                        </p>
+                        <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                           You will be notified once your abstract gets accepted.</p> -->
+                        </div>
                   
                   <h2 class="text-center">JIIT </h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
