--- a/home.html
+++ b/home.html
@@ -306,8 +306,15 @@
           <i class="fa fa-dot-circle-o" style="margin-left: 20px"></i>
           Speakers from around the globe.<br />
           <a href="about"><button>Know more</button></a> -->
-
-
+          <p class=bold>Vision</p>
+          To become a centre of excellence in the field of IT and related emerging areas of education, training and research comparable to the best in the world for producing professionals who shall be leaders in innovation, entrepreneurship, creativity and management.
+          <br><br>
+          <p class="bold"> Mission </p>
+          MISSION 1: To develop as a benchmark University in emerging technologies.
+            <br>
+          MISSION 2: To provide state-of-the-art teaching learning process and R&D environment.
+            <br>
+          MISSION 3: To harness human capital for sustainable competitive edge and social relevance.
 
         </div>
 
@@ -742,7 +749,7 @@
             <p>
               The schedule of the conference will be available on the website
               and you’ll receive the copy of the same on your registered email
-              ID 2 days before the conference i.e. 26 th January 2021.
+              ID 2 days before the conference i.e. 18 th January 2022.
             </p>
           </div>
           <div class="track-wrap">
@@ -756,8 +763,8 @@
             <h1>In which journal paper will my abstract be published?</h1>
             <p>
               We are planning to publish the conference proceedings (only
-              abstracts) in esteemed journal ‘Asian Journal of Pharmaceutical
-              and Clinical Research’.
+              abstracts) in esteemed journal ‘International Journal,
+              VSRD International Journal of Biotechnology and Pharmaceutical Sciences’.
             </p>
           </div>
           <div class="track-wrap">
@@ -769,9 +776,12 @@
               mentioned below:
             </p>
             <p>
-              1. Scopus indexed ‘Current Trends in Biotechnology and Pharmacy’
+              1. International Journal
+              (With e-ISSN 2276-9197)
+              VSRD International Journal of Biotechnology and Pharmaceutical Sciences, Double blind peer reviewed (Indexed in google scholar, NISCAIR Impact factor 0.382, Scientific impact factor 2.889, Unique research impact factor 1.9542)
             </p>
-            <p>2. The Pharmaceutical and Chemical Journal</p>
+            <p>2. International Journal of Applied Research (Rs. 1500, Indexing in Research Gate, Google Scholar, CAS, Site factor and 20 more)</p>
+            <p>3. Indian Journal of Natural Sciences ISSN: 0976-0997 (Rs. 4500, indexed in WoS/ESCI)</p>
             <p>The publishing of paper is subject to review and payment.</p>
           </div>
         </div>
@@ -838,9 +848,9 @@
               <div class="col-lg-4 col-md-4 mb-1 px-1">
                 <div class="portfolio-item wow animated" style="visibility: visible;">
                   <a class="portfolio-popup">
-                    <img src="img/cp.png" alt="" style="height:200px;">
+                    <img src="img/hauzkhas.png" alt="" style="height:200px;">
                     <div class="portfolio-overlay">
-                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Connaught Place</h5></div>
+                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;">Hauz Khas Fort</h5></div>
                     </div>
                   </a>
                 </div>
@@ -849,9 +859,9 @@
               <div class="col-lg-4 col-md-4 mb-1 px-1">
                 <div class="portfolio-item wow animated" style="visibility: visible;">
                   <a class="portfolio-popup">
-                    <img src="img/india_gate.png" alt="" style="height:200px;">
+                    <img src="img/tomb.png" alt="" style="height:200px;">
                     <div class="portfolio-overlay">
-                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;"> India Gate</h5></div>
+                      <div class="portfolio-info"><h5 class="wow fadeInUp text-light" style="visibility: visible; animation-name: fadeInUp;"> Humayun's Tomb</h5></div>
                     </div>
                   </a>
                 </div>
