--- a/home.html
+++ b/home.html
@@ -331,6 +331,15 @@
           contributes to the department academic core.
           <br /><br />
 
+          <p class="bold">Vision </p>
+          To be a centre of excellence in Biotechnology for providing quality education and carrying out cutting edge research to produce professionals, innovators, researchers and entrepreneurs.
+          <br> <br>
+          <p class="bold">Mission</p>
+          MISSION 1: To offer contemporary, futuristic and flexible curricula of Biotechnology for teaching and training.
+          <br/>
+          MISSION 2: To carry out globally acceptable cutting edge research through sponsored projects and to provide state of art laboratories for experimental work.
+          <br>
+          MISSION 3: To develop bio safe, socially ethically and environmentally acceptable solutions to address health, environmental, industrial, entrepreneurial and societal concerns.
         </div>
 
 
