--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -218,9 +218,9 @@
                         <h3>TECHNICAL COMMITTEE</h3>
                         <p>Prof. Neeraj Wadhwa
                         </p>
-                        <p>Prof. Vibha Rani
-                        </p>
                         <p>Prof. Sujata Mohanty
+                        </p>
+                        <p>Prof. Vibha Rani
                         </p>
                         <p>Dr. Smriti Gaur
                         </p>
@@ -230,30 +230,37 @@
                         </p> -->
 
                         <h3>ADMINISTRATIVE COMMITTEE</h3>
-                        <p>Prof. Sudha Srivastava
-                        </p>
                         <p>Prof. S Krishna Sundari
                         </p>
-                        <p>Dr. Ashwani Mathur
-                        </p>
-                        <p>Dr. Vibha Gupta
+                        <p>Prof. Sudha Srivastava
                         </p>
                         <p>Prof. Indira P Sarethy
                         </p>
+                        <p>Prof. Reema Gabrani
+                        </p>
+                        <p>Dr. Shweta Dang
+                        </p>
+                        <p>Dr. Ashwani Mathur
+                        </p>
+                        <p>Dr Shalni Mani
+                        </p>
+                        <p>Dr. Vibha Gupta
+                        </p>
+                        <p>Dr. Chakresh Kumar Jain
+                        </p>
                         <p>Dr. Priyadarshini
                         </p>
+                        <p>Dr. S Bhattacharya
+                        </p>
                         <p>Dr Garima Mathur
+                        </p>
+                        <p>Dr. Manisha Singh
+                          
                         </p>
                         <p>Dr. Sonam Chawla
                         </p>
                         <p>Ms. Ekta Bhatt
                         </p>
-                        <p>Dr. Chakresh Kumar Jain</p>
-                        <p>Dr. Manisha Singh</p>
-                        <p>Prof. Reema Gabrani</p>
-                        <p>Dr Shalni Mani</p>
-                        <p>Dr. S Bhattacharya</p>
-                        <p>Dr. Shweta Dang</p>
 
 
                         <!-- <h3>FINANCE COMMITTEE</h3>
