--- a/publishing-partners.html
+++ b/publishing-partners.html
@@ -110,7 +110,7 @@
                       <a href="http://iaraedu.com/about-journal/" style="font-size: 28.5px;" target="_blank"> IARA - Indian Academicians and Research Association </a> <br>
                       <ul class="ul-guidelines">
                           <li>
-                            Indian Journal of Natural Sciences ISSN: 0976-0997 (Rs. 4500, indexed in WoS/ESCI)
+                            Indian Journal of Natural Sciences ISSN: 0976-0997 (Rs. 4500, indexed in WoS)
                           </li>
                       </ul>
                       
