--- a/home.html
+++ b/home.html
@@ -251,9 +251,9 @@
         <div class="col-lg-4 col-md-6 col-sm-12">
         <div class="date-table">
         <div class="date-head">
-        <h4>2 Weeks</h4>
+        <h4>Within</h4>
         
-        <h2> After Submission </h2>
+        <h2> 2 Weeks </h2>
         </div>
         
         <div class="date-content">
@@ -791,7 +791,7 @@
               VSRD International Journal of Biotechnology and Pharmaceutical Sciences, Double blind peer reviewed (Indexed in google scholar, NISCAIR Impact factor 0.382, Scientific impact factor 2.889, Unique research impact factor 1.9542)
             </p>
             <p>2. International Journal of Applied Research (Rs. 1500, Indexing in Research Gate, Google Scholar, CAS, Site factor and 20 more)</p>
-            <p>3. Indian Journal of Natural Sciences ISSN: 0976-0997 (Rs. 4500, indexed in WoS/ESCI)</p>
+            <p>3. Indian Journal of Natural Sciences ISSN: 0976-0997 (Rs. 4500, indexed in WoS)</p>
             <p>The publishing of paper is subject to review and payment.</p>
           </div>
         </div>
